<?xml version="1.0" encoding="utf-8"?>
<resources>
    
 
    <string name="signup"><u>Sign Up</u></string>
    <string name="forgot"><u>Forget Password?</u></string>


    <string name="app_name">BetaPro</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="publish_tab">Publish</string>
    <string name="myapps_tab">MyApps</string>
    <string name="my_apps">IN MYAPPS</string>
    <string name="my_list">MY LIST</string>
    <string name="one">$0</string>
    <string name="five">$5</string>
    <string name="ten">$10</string>
    




   
    <string name="read_review">In Read Review</string>
    <string name="browse_tab">Browse</string>
    <string name="notification_tab">Notifications</string>
    <string name="writereview_tab">Review</string>
    <string name="rate_btn">Rate</string>
    <string name="ask_btn">Ask For More Reviews</string>
    <string name="save_btn">Save</string>
    <string name="pay_btn">Pay</string>
    <string name="upload_btn">Upload App</string>
    <string name="title_activity_home">Home</string>

</resources>