<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    
   
        <Button 
            android:id="@+id/rateBtn"
            android:text="@string/rate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            ></Button>
         <Button 
            android:text="@string/ask_btn" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          
            ></Button>
          
          <Button 
            android:text="@string/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            ></Button>
        
        

    
</LinearLayout>