<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">
    
     <RatingBar
        android:id="@+id/rating_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:numStars="5"
        android:stepSize="1.0"
        android:rating="2.0" />
    <TextView
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >       
        
        
    </TextView>
    
    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        />
    <RelativeLayout android:layout_height="wrap_content"
        		android:layout_width="fill_parent"
        		android:orientation="horizontal"
        		android:layout_marginLeft="50dp">
      <TextView
        android:id="@+id/grid1"
        android:text="@string/one"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >       
        </TextView>
              <TextView
        android:id="@+id/grid2"
        android:text="@string/five"
        android:layout_toRightOf="@id/grid1"
       android:layout_marginLeft="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >       
        </TextView>
              <TextView
        android:id="@+id/grid3"
        android:text="@string/ten"
         android:layout_alignParentRight="true"
         android:layout_marginRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >       
        </TextView>
    </RelativeLayout>
   
        <Button 
            android:id="@+id/payBtn"
            android:text="@string/pay_btn"
            android:layout_marginBottom="10sp"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:background="@drawable/greenbutton"
         ></Button>
       
        

    
</LinearLayout>